--- a/test/integration/targets/aci_access_port_to_interface_policy_leaf_profile/tasks/main.yml
+++ b/test/integration/targets/aci_access_port_to_interface_policy_leaf_profile/tasks/main.yml
@@ -16,6 +16,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     state: present
     leaf_interface_profile: leafintprftest
   register: leaf_profile_present
@@ -54,7 +55,7 @@
     that:
     - accessport_to_intf_check_mode_present.changed == true
     - accessport_to_intf_present.changed == true
-    - accessport_to_intf_present.existing == []
+    - accessport_to_intf_present.original == []
     - 'accessport_to_intf_present.config == {"infraHPortS": {"attributes": {"name": "anstest_accessportselector"}, "children": [{"infraPortBlk": {"attributes": {"fromPort": "13", "name": "anstest_leafportblkname", "toPort": "16"}}}, {"infraRsAccBaseGrp": {"attributes": {"tDn": "uni/infra/funcprof/accportgrp-None"}}}]}}'
     - accessport_to_intf_idempotent.changed == false
     - accessport_to_intf_idempotent.config == {}
@@ -72,7 +73,7 @@
   assert:
     that:
       - binding_query.changed == false
-      - binding_query.existing | length >= 1
+      - binding_query.original | length >= 1
       - '"api/mo/uni/infra/accportprof-leafintprftest/hports-anstest_accessportselector-typ-range.json" in binding_query.url'
 
 - name: Remove binding of interface access port selector and Interface Policy Leaf Profile - check mode
@@ -105,11 +106,11 @@
   assert:
     that:
       - accessport_to_intf_check_mode_absent.changed == true
-      - accessport_to_intf_check_mode_absent.existing != []
+      - accessport_to_intf_check_mode_absent.original != []
       - accessport_to_intf_absent.changed == true
-      - accessport_to_intf_absent.existing == accessport_to_intf_check_mode_absent.existing
+      - accessport_to_intf_absent.original == accessport_to_intf_check_mode_absent.original
       - accessport_to_intf_absent_idempotent.changed == false
-      - accessport_to_intf_absent_idempotent.existing == []
+      - accessport_to_intf_absent_idempotent.original == []
       - accessport_to_intf_absent_missing_param.failed == true
       - 'accessport_to_intf_absent_missing_param.msg == "state is absent but all of the following are missing: access_port_selector"'
 
