--- a/test/integration/targets/aci_ap/tasks/main.yml
+++ b/test/integration/targets/aci_ap/tasks/main.yml
@@ -16,6 +16,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     state: present
     tenant: anstest
   register: tenant_present
@@ -60,11 +61,11 @@
     that:
       - ap_present_check_mode.changed == true
       - ap_present.changed == true
-      - ap_present.existing == []
+      - ap_present.original == []
       - ap_present.config == ap_present_check_mode.config
       - 'ap_present.config == {"fvAp": {"attributes": {"descr": "Ansible Test", "name": "anstest"}}}'
       - ap_present_idempotent.changed == false
-      - ap_present_idempotent.existing != []
+      - ap_present_idempotent.original != []
       - ap_present_idempotent.config == {}
       - ap_present_update.changed == true
       - 'ap_present_update.config.fvAp.attributes == {"descr": "Ansible Test Update"}'
@@ -100,21 +101,21 @@
   assert:
     that:
       - query_ap.changed == false
-      - query_ap.existing | length == 1
-      - 'query_ap.existing.0.fvAp.attributes.name == "anstest"'
+      - query_ap.original | length == 1
+      - 'query_ap.original.0.fvAp.attributes.name == "anstest"'
       - '"tn-anstest/ap-anstest.json" in query_ap.url'
       - query_ap_tenant.changed == false
-      - query_ap_tenant.existing | length == 1
-      - query_ap_tenant.existing.0.fvTenant.children | length == 2
+      - query_ap_tenant.original | length == 1
+      - query_ap_tenant.original.0.fvTenant.children | length == 2
       - '"rsp-subtree-class=fvAp" in query_ap_tenant.filter_string'
       - '"tn-anstest.json" in query_ap_tenant.url'
       - query_ap_ap.changed == false
-      - query_ap_ap.existing != []
-      - query_ap_ap.existing.0.fvAp is defined
+      - query_ap_ap.original != []
+      - query_ap_ap.original.0.fvAp is defined
       - '"query-target-filter=eq(fvAp.name, \"anstest\")" in query_ap_ap.filter_string'
       - '"class/fvAp.json" in query_ap_ap.url'
       - query_all.changed == false
-      - query_all.existing | length > 1
+      - query_all.original | length > 1
       - '"class/fvAp.json" in query_all.url'
 
 - name: delete ap - check_mode works
@@ -150,12 +151,12 @@
   assert:
     that:
       - ap_delete_check_mode.changed == true
-      - ap_delete_check_mode.existing != []
+      - ap_delete_check_mode.original != []
       - '"tn-anstest/ap-anstest.json" in ap_delete_check_mode.url'
       - ap_delete.changed == true
-      - ap_delete.existing == ap_delete_check_mode.existing
+      - ap_delete.original == ap_delete_check_mode.original
       - ap_delete_idempotent.changed == false
-      - ap_delete_idempotent.existing == []
+      - ap_delete_idempotent.original == []
       - ap_delete_missing_param.failed == true
       - 'ap_delete_missing_param.msg == "state is absent but all of the following are missing: tenant"'
 
