--- a/test/integration/targets/aci_config_snapshot/tasks/main.yml
+++ b/test/integration/targets/aci_config_snapshot/tasks/main.yml
@@ -16,6 +16,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     export_policy: anstest
     max_count: 10
     include_secure: no
@@ -66,7 +67,7 @@
 
 - name: generate snapshot name
   set_fact:
-    test_snapshot: "{{ query_export.existing.0.configSnapshotCont.children.0.configSnapshot.attributes.rn.strip('snapshot-') }}"
+    test_snapshot: "{{ query_export.original.0.configSnapshotCont.children.0.configSnapshot.attributes.rn.strip('snapshot-') }}"
 
 - name: query with export_policy and snapshot
   aci_config_snapshot: &query_both
@@ -93,12 +94,12 @@
       - query_export.failed == false
       - query_export.changed == false
       - '"snapshots-[uni/fabric/configexp-anstest].json" in query_export.url'
-      - 'query_export.existing.0.configSnapshotCont.attributes.name == "anstest"'
-      - query_export.existing.0.configSnapshotCont.children | length > 1
+      - 'query_export.original.0.configSnapshotCont.attributes.name == "anstest"'
+      - query_export.original.0.configSnapshotCont.children | length > 1
       - query_export_snapshot.failed == false
       - query_export_snapshot.changed == false
       - '"snapshots-[uni/fabric/configexp-anstest]/snapshot-{{ test_snapshot }}.json" in query_export_snapshot.url'
-      - query_export_snapshot.existing | length == 1
+      - query_export_snapshot.original | length == 1
       - query_snapshot.failed == false
       - query_snapshot.changed == false
       - '"class/configSnapshot.json" in query_snapshot.url'
@@ -106,7 +107,7 @@
       - query_all.failed == false
       - query_all.changed == false
       - '"class/configSnapshot.json" in query_all.url'
-      - query_all.existing | length > 1
+      - query_all.original | length > 1
 
 - name: delete works
   aci_config_snapshot: &delete
@@ -132,10 +133,10 @@
       - delete_snapshot.failed == false
       - delete_snapshot.changed == true
       - 'delete_snapshot.config == {"configSnapshot": {"attributes": {"retire": "yes"}}}'
-      - delete_snapshot.existing != []
-      - delete_snapshot.existing.0.configSnapshot.attributes.name == test_snapshot
+      - delete_snapshot.original != []
+      - delete_snapshot.original.0.configSnapshot.attributes.name == test_snapshot
       - delete_idempotent.failed == false
       - delete_idempotent.changed == false
-      - delete_idempotent.existing == []
+      - delete_idempotent.original == []
       - delete_missing_param.failed == true
       - 'delete_missing_param.msg == "state is absent but all of the following are missing: snapshot"'
