--- a/test/integration/targets/aci_contract/tasks/main.yml
+++ b/test/integration/targets/aci_contract/tasks/main.yml
@@ -16,6 +16,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     state: present
     tenant: anstest
   register: tenant_present
@@ -59,7 +60,7 @@
   assert:
     that:
       - present_check_mode.changed == true
-      - present_check_mode.existing == []
+      - present_check_mode.original == []
       - 'present_check_mode.config == {"vzBrCP": {"attributes": {"name": "anstest", "descr": "Ansible Test"}}}'
       - contract_present.changed == true
       - contract_present.config == present_check_mode.config
@@ -99,19 +100,19 @@
   assert:
     that:
       - query_contract.changed == false
-      - query_contract.existing | length == 1
+      - query_contract.original | length == 1
       - '"tn-anstest/brc-anstest.json" in query_contract.url'
       - query_tenant.changed == false
-      - query_tenant.existing | length == 1
-      - query_tenant.existing.0.fvTenant.children | length > 1
+      - query_tenant.original | length == 1
+      - query_tenant.original.0.fvTenant.children | length > 1
       - '"rsp-subtree-class=vzBrCP" in query_tenant.filter_string'
       - '"tn-anstest.json" in query_tenant.url'
       - query_name.changed == false
-      - query_name.existing != []
+      - query_name.original != []
       - '"query-target-filter=eq(vzBrCP.name, \"anstest\")" in query_name.filter_string'
       - '"class/vzBrCP.json" in query_name.url'
       - query_all.changed == false
-      - query_all.existing | length > 1
+      - query_all.original | length > 1
       - '"class/vzBrCP.json" in query_all.url'
 
 - name: delete contract - check mode works
@@ -147,11 +148,11 @@
   assert:
     that:
       - absent_check_mode.changed == true
-      - absent_check_mode.existing != []
+      - absent_check_mode.original != []
       - contract_absent.changed == true
-      - contract_absent.existing == absent_check_mode.existing
+      - contract_absent.original == absent_check_mode.original
       - absent_idempotent.changed == false
-      - absent_idempotent.existing == []
+      - absent_idempotent.original == []
       - absent_missing_param.failed == true
       - 'absent_missing_param.msg == "state is absent but all of the following are missing: tenant"'
 
