--- a/test/integration/targets/aci_contract_subject_to_filter/tasks/main.yml
+++ b/test/integration/targets/aci_contract_subject_to_filter/tasks/main.yml
@@ -16,6 +16,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     state: present
     tenant: anstest
   register: tenant_present
@@ -84,14 +85,14 @@
   assert:
     that:
       - subject_filter_present_check_mode.changed == true
-      - subject_filter_present_check_mode.existing == []
+      - subject_filter_present_check_mode.original == []
       - 'subject_filter_present_check_mode.config == {"vzRsSubjFiltAtt": {"attributes": {"directives": "log", "tnVzFilterName": "anstest"}}}'
       - subject_filter_present.changed == true
-      - subject_filter_present.existing == []
+      - subject_filter_present.original == []
       - subject_filter_present.config == subject_filter_present_check_mode.config
       - subject_filter_present_2.changed == true
       - subject_filter_present_idempotent.changed == false
-      - subject_filter_present_idempotent.existing != []
+      - subject_filter_present_idempotent.original != []
       - subject_filter_update.changed == true
       - 'subject_filter_update.config.vzRsSubjFiltAtt.attributes == {"directives": ""}'
       - present_missing_param.failed == true
@@ -114,10 +115,10 @@
   assert:
     that:
       - query_all.changed == false
-      - query_all.existing | length > 1
-      - query_all.existing.0.vzRsSubjFiltAtt is defined
+      - query_all.original | length > 1
+      - query_all.original.0.vzRsSubjFiltAtt is defined
       - query_binding.changed == false
-      - query_binding.existing != []
+      - query_binding.original != []
 
 - name: delete subject filter binding - check mode works
   aci_contract_subject_to_filter: &aci_subject_filter_absent
@@ -153,11 +154,11 @@
     that:
       - subject_filter_absent_check_mode.changed == true
       - subject_filter_absent_check_mode.proposed == {}
-      - subject_filter_absent_check_mode.existing != []
+      - subject_filter_absent_check_mode.original != []
       - subject_filter_absent.changed == true
-      - subject_filter_absent.existing != []
+      - subject_filter_absent.original != []
       - subject_filter_absent_idempotent.changed == false
-      - subject_filter_absent_idempotent.existing == []
+      - subject_filter_absent_idempotent.original == []
       - absent_missing_param.failed == true
       - 'absent_missing_param.msg == "state is absent but all of the following are missing: filter"'
 
