--- a/test/integration/targets/aci_epg/tasks/main.yml
+++ b/test/integration/targets/aci_epg/tasks/main.yml
@@ -16,6 +16,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     state: present
     tenant: anstest
   register: tenant_present
@@ -73,7 +74,7 @@
   assert:
     that:
       - epg_present_check_mode.changed == true
-      - epg_present_check_mode.existing == []
+      - epg_present_check_mode.original == []
       - epg_present_check_mode.config.fvAEPg.attributes != {}
       - 'epg_present_check_mode.config.fvAEPg.children.0.fvRsBd.attributes.tnFvBDName == "anstest"'
       - epg_present.changed == true
@@ -102,11 +103,11 @@
   assert:
     that:
       - epg_query.changed == false
-      - epg_query.existing | length == 1
-      - 'epg_query.existing.0.fvAEPg.attributes.name == "anstest"'
+      - epg_query.original | length == 1
+      - 'epg_query.original.0.fvAEPg.attributes.name == "anstest"'
       - '"tn-anstest/ap-anstest/epg-anstest.json" in epg_query.url'
       - epg_query_all.changed == false
-      - epg_query_all.existing | length > 1
+      - epg_query_all.original | length > 1
       - '"rsp-subtree-class=fvRsBd" in epg_query_all.filter_string'
       - '"class/fvAEPg.json" in epg_query_all.url'
 
@@ -143,11 +144,11 @@
   assert:
     that:
       - delete_epg_check_mode.changed == true
-      - delete_epg_check_mode.existing != []
+      - delete_epg_check_mode.original != []
       - delete_epg.changed == true
-      - delete_epg.existing == delete_epg_check_mode.existing
+      - delete_epg.original == delete_epg_check_mode.original
       - delete_epg_idempotent.changed == false
-      - delete_epg_idempotent.existing == []
+      - delete_epg_idempotent.original == []
       - delete_epg_missing_param.failed == true
       - 'delete_epg_missing_param.msg == "state is absent but all of the following are missing: tenant"'
 
@@ -155,16 +156,16 @@
   aci_bd:
     <<: *aci_bd_present
     state: absent
-  when: bd_present.existing == []
+  when: bd_present.original == []
 
 - name: cleanup ap
   aci_ap:
     <<: *aci_ap_present
     state: absent
-  when: ap_present.existing == []
+  when: ap_present.original == []
 
 - name: cleanup tenant
   aci_tenant:
     <<: *aci_tenant_present
     state: absent
-  when: tenant_present.existing == []
+  when: tenant_present.original == []
