--- a/test/integration/targets/aci_filter_entry/tasks/main.yml
+++ b/test/integration/targets/aci_filter_entry/tasks/main.yml
@@ -16,6 +16,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     state: absent
     tenant: anstest
 
@@ -27,6 +28,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     state: present
     tenant: anstest
   register: tenant_present
@@ -110,16 +112,16 @@
   assert:
     that:
       - entry_present_check_mode.changed == true
-      - entry_present_check_mode.existing == []
+      - entry_present_check_mode.original == []
       - 'entry_present_check_mode.config == {"vzEntry": {"attributes": {"dFromPort": "http","dToPort": "88","descr": "Ansible Test","etherT": "ip","name": "anstest","prot": "tcp"}}}'
       - entry_present.changed == true
-      - entry_present.existing == []
+      - entry_present.original == []
       - entry_present.config == entry_present_check_mode.config
       - entry_present_idempotent.changed == false
-      - entry_present_idempotent.existing != []
+      - entry_present_idempotent.original != []
       - entry_present_idempotent.config == {}
       - entry_present_update.changed == true
-      - entry_present_update.existing != []
+      - entry_present_update.original != []
       - entry_present_update.config != entry_present_update.proposed
       - entry_present_2.changed == true
       - 'entry_present_2.config.vzEntry.attributes == {"arpOpc": "reply",  "etherT": "arp", "name": "anstest2"}'
@@ -187,44 +189,44 @@
   assert:
     that:
       - query_tenant_filter_entry.changed == false
-      - query_tenant_filter_entry.existing | length == 1
-      - 'query_tenant_filter_entry.existing.0.vzEntry.attributes.name == "anstest"'
+      - query_tenant_filter_entry.original | length == 1
+      - 'query_tenant_filter_entry.original.0.vzEntry.attributes.name == "anstest"'
       - '"tn-anstest/flt-anstest/e-anstest.json" in query_tenant_filter_entry.url'
       - query_filter_entry.changed == false
-      - 'query_filter_entry.existing.0.vzFilter.attributes.name == "anstest"'
-      - query_filter_entry.existing.0.vzFilter.children | length == 1
+      - 'query_filter_entry.original.0.vzFilter.attributes.name == "anstest"'
+      - query_filter_entry.original.0.vzFilter.children | length == 1
       - '"query-target-filter=eq(vzFilter.name, \"anstest\")" in query_filter_entry.filter_string'
       - '"rsp-subtree-filter=eq(vzEntry.name, \"anstest\")" in query_filter_entry.filter_string'
       - '"class/vzFilter.json" in query_filter_entry.url'
       - query_tenant_entry.changed == false
-      - query_tenant_entry.existing | length == 1
-      - 'query_tenant_entry.existing.0.fvTenant.attributes.name == "anstest"'
+      - query_tenant_entry.original | length == 1
+      - 'query_tenant_entry.original.0.fvTenant.attributes.name == "anstest"'
       - '"rsp-subtree-filter=eq(vzEntry.name, \"anstest\")" in query_tenant_entry.filter_string'
       - '"rsp-subtree-class=vzEntry" in query_tenant_entry.filter_string'
       - '"tn-anstest.json" in query_tenant_entry.url'
       - query_tenant_filter.changed == false
-      - query_tenant_filter.existing | length == 1
-      - 'query_tenant_filter.existing.0.vzFilter.attributes.name == "anstest"'
-      - query_tenant_filter.existing.0.vzFilter.children | length == 4
+      - query_tenant_filter.original | length == 1
+      - 'query_tenant_filter.original.0.vzFilter.attributes.name == "anstest"'
+      - query_tenant_filter.original.0.vzFilter.children | length == 4
       - '"rsp-subtree-class=vzEntry" in query_tenant_filter.filter_string'
       - '"tn-anstest/flt-anstest.json" in query_tenant_filter.url'
       - query_entry.changed == false
-      - 'query_entry.existing.0.vzEntry.attributes.name == "anstest"'
+      - 'query_entry.original.0.vzEntry.attributes.name == "anstest"'
       - '"query-target-filter=eq(vzEntry.name, \"anstest\")" in query_entry.filter_string'
       - '"class/vzEntry.json" in query_entry.url'
       - query_filter.changed == false
-      - 'query_filter.existing.0.vzFilter.attributes.name == "anstest"'
+      - 'query_filter.original.0.vzFilter.attributes.name == "anstest"'
       - '"query-target-filter=eq(vzFilter.name, \"anstest\")" in query_filter.filter_string'
       - '"rsp-subtree-class=vzEntry" in query_filter.filter_string'
       - '"class/vzFilter.json" in query_filter.url'
       - query_tenant.changed == false
-      - query_tenant.existing | length == 1
-      - 'query_tenant.existing.0.fvTenant.attributes.name == "anstest"'
+      - query_tenant.original | length == 1
+      - 'query_tenant.original.0.fvTenant.attributes.name == "anstest"'
       - '"rsp-subtree-class=vzFilter,vzEntry" in query_tenant.filter_string'
       - '"tn-anstest.json" in query_tenant.url'
       - query_all.changed == false
-      - query_all.existing | length > 1
-      - query_all.existing.0.vzEntry is defined
+      - query_all.original | length > 1
+      - query_all.original.0.vzEntry is defined
       - '"class/vzEntry.json" in query_all.url'
 
 - name: delete entry - check mode works
@@ -261,12 +263,12 @@
   assert:
     that:
       - entry_absent_check_mode.changed == true
-      - entry_absent_check_mode.existing != []
+      - entry_absent_check_mode.original != []
       - entry_absent.changed == true
-      - entry_absent.existing == entry_absent_check_mode.existing
+      - entry_absent.original == entry_absent_check_mode.original
       - entry_absent.proposed == {}
       - entry_absent_idempotent.changed == false
-      - entry_absent_idempotent.existing == []
+      - entry_absent_idempotent.original == []
       - absent_missing_param.failed == true
       - 'absent_missing_param.msg == "state is absent but all of the following are missing: entry, filter"'
 
