--- a/test/integration/targets/aci_interface_selector_to_switch_policy_leaf_profile/tasks/main.yml
+++ b/test/integration/targets/aci_interface_selector_to_switch_policy_leaf_profile/tasks/main.yml
@@ -16,6 +16,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     leaf_profile: swleafprftest
     state: absent
 
@@ -27,6 +28,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     leaf_interface_profile: leafintprftest
     state: absent
 
@@ -38,6 +40,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     leaf_profile: swleafprftest
     state: present
   register: leaf_profile_present
@@ -50,6 +53,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     leaf_interface_profile: leafintprftest
     state: present
   register: leaf_profile_present
@@ -77,7 +81,7 @@
     that:
     - intftoleaf_check_mode_present.changed == true
     - intftoleaf_present.changed == true
-    - intftoleaf_present.existing == []
+    - intftoleaf_present.original == []
     - 'intftoleaf_present.config == {"infraRsAccPortP": {"attributes": {"tDn": "uni/infra/accportprof-leafintprftest"}}}'
     - intftoleaf_idempotent.changed == false
     - intftoleaf_idempotent.config == {}
@@ -93,7 +97,7 @@
   assert:
     that:
       - binding_query.changed == false
-      - binding_query.existing | length >= 1
+      - binding_query.original | length >= 1
       - '"api/mo/uni/infra/nprof-swleafprftest/rsaccPortP-[uni/infra/accportprof-leafintprftest].json" in binding_query.url'
 
 - name: Remove binding of interface access port selector and Interface Policy Leaf Profile - check mode
@@ -125,11 +129,11 @@
   assert:
     that:
       - intftoleaf_check_mode_absent.changed == true
-      - intftoleaf_check_mode_absent.existing != []
+      - intftoleaf_check_mode_absent.original != []
       - intftoleaf_absent.changed == true
-      - intftoleaf_absent.existing == intftoleaf_check_mode_absent.existing
+      - intftoleaf_absent.original == intftoleaf_check_mode_absent.original
       - intftoleaf_absent_idempotent.changed == false
-      - intftoleaf_absent_idempotent.existing == []
+      - intftoleaf_absent_idempotent.original == []
       - intftoleaf_absent_missing_param.failed == true
       - 'intftoleaf_absent_missing_param.msg == "state is absent but all of the following are missing: interface_selector"'
 
