--- a/test/integration/targets/aci_switch_leaf_selector/tasks/main.yml
+++ b/test/integration/targets/aci_switch_leaf_selector/tasks/main.yml
@@ -16,6 +16,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     leaf_profile: sw_name_test
     state: absent
 
@@ -27,6 +28,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     leaf_profile: sw_name_test
     state: present
   register: leaf_profile_present
@@ -65,7 +67,7 @@
     that:
     - sw_leaf_selec_check_mode_present.changed == true
     - sw_leaf_selec_present.changed == true
-    - sw_leaf_selec_present.existing == []
+    - sw_leaf_selec_present.original == []
     - 'sw_leaf_selec_present.config ==  {"infraLeafS": {"attributes": {"name": "leaf_selector_name"}, "children": [{"infraNodeBlk": {"attributes": {"from_": "1011", "name": "node_blk_name", "to_": "1011"}}},{"infraRsAccNodePGrp": {"attributes": {"tDn": "uni/infra/funcprof/accnodepgrp-None"}}}]}}'
     - sw_leaf_selec_idempotent.changed == false
     - sw_leaf_selec_idempotent.config == {}
@@ -83,7 +85,7 @@
   assert:
     that:
       - binding_query.changed == false
-      - binding_query.existing | length >= 1
+      - binding_query.original | length >= 1
       - '"api/mo/uni/infra/nprof-sw_name_test/leaves-leaf_selector_name-typ-range.json" in binding_query.url'
 
 - name: Remove binding of interface access port selector and Interface Policy Leaf Profile - check mode
@@ -116,11 +118,11 @@
   assert:
     that:
       - sw_leaf_selec_check_mode_absent.changed == true
-      - sw_leaf_selec_check_mode_absent.existing != []
+      - sw_leaf_selec_check_mode_absent.original != []
       - sw_leaf_selec_absent.changed == true
-      - sw_leaf_selec_absent.existing == sw_leaf_selec_check_mode_absent.existing
+      - sw_leaf_selec_absent.original == sw_leaf_selec_check_mode_absent.original
       - sw_leaf_selec_absent_idempotent.changed == false
-      - sw_leaf_selec_absent_idempotent.existing == []
+      - sw_leaf_selec_absent_idempotent.original == []
       - sw_leaf_selec_absent_missing_param.failed == true
       - 'sw_leaf_selec_absent_missing_param.msg == "state is absent but all of the following are missing: leaf"'
 
