--- a/test/integration/targets/aci_vrf/tasks/main.yml
+++ b/test/integration/targets/aci_vrf/tasks/main.yml
@@ -16,6 +16,7 @@
     validate_certs: '{{ aci_validate_certs | default(false) }}'
     use_ssl: '{{ aci_use_ssl | default(true) }}'
     use_proxy: '{{ aci_use_proxy | default(true) }}'
+    output_level: info
     state: present
     tenant: anstest
   register: tenant_present
@@ -66,11 +67,11 @@
       - 'vrf_present_check_mode.config == {"fvCtx": {"attributes": {"descr": "Ansible Test", "name": "anstest"}}}'
       - vrf_present.changed == true
       - vrf_present.config == vrf_present_check_mode.config
-      - vrf_present.existing == []
+      - vrf_present.original == []
       - vrf_present_idempotent.changed == false
-      - vrf_present_idempotent.existing != []
+      - vrf_present_idempotent.original != []
       - vrf_update.changed == true
-      - vrf_update.existing != []
+      - vrf_update.original != []
       - vrf_update.changed != vrf_update.proposed
       - 'vrf_update.config == {"fvCtx": {"attributes": {"descr": "Ansible Test Update", "pcEnfPref": "unenforced"}}}'
       - 'vrf_present_2.config.fvCtx.attributes == {"name": "anstest2", "pcEnfDir": "egress", "descr": "Ansible Test"}'
@@ -106,22 +107,22 @@
   assert:
     that:
       - query_all.changed == false
-      - query_all.existing | length > 1
-      - query_all.existing.0.fvCtx is defined
+      - query_all.original | length > 1
+      - query_all.original.0.fvCtx is defined
       - '"class/fvCtx.json" in query_all.url'
       - query_tenant.changed == false
-      - query_tenant.existing | length == 1
-      - query_tenant.existing.0.fvTenant.children | length == 2
-      - 'query_tenant.existing.0.fvTenant.attributes.name == "anstest"'
+      - query_tenant.original | length == 1
+      - query_tenant.original.0.fvTenant.children | length == 2
+      - 'query_tenant.original.0.fvTenant.attributes.name == "anstest"'
       - '"rsp-subtree-class=fvCtx" in query_tenant.filter_string'
       - '"tn-anstest.json" in query_tenant.url'
       - query_vrf_vrf.changed == false
-      - query_vrf_vrf.existing != []
-      - 'query_vrf_vrf.existing.0.fvCtx.attributes.name == "anstest"'
+      - query_vrf_vrf.original != []
+      - 'query_vrf_vrf.original.0.fvCtx.attributes.name == "anstest"'
       - '"query-target-filter=eq(fvCtx.name, \"anstest\")" in query_vrf_vrf.filter_string'
       - '"class/fvCtx.json" in query_vrf_vrf.url'
       - query_vrf.changed == false
-      - query_vrf.existing | length == 1
+      - query_vrf.original | length == 1
       - '"tn-anstest/ctx-anstest.json" in query_vrf.url'
 
 - name: delete vrf - check mode works
@@ -157,12 +158,12 @@
   assert:
     that:
       - vrf_absent_check_mode.changed == true
-      - vrf_absent_check_mode.existing != []
+      - vrf_absent_check_mode.original != []
       - vrf_absent_check_mode.proposed == {}
       - vrf_absent.changed == true
-      - vrf_absent.existing == vrf_absent_check_mode.existing
+      - vrf_absent.original == vrf_absent_check_mode.original
       - vrf_absent_idempotent.changed == false
-      - vrf_absent_idempotent.existing == []
+      - vrf_absent_idempotent.original == []
       - vrf_absent_missing_param.failed == true
       - 'vrf_absent_missing_param.msg == "state is absent but all of the following are missing: vrf"'
 
